tests/negative/CompileBlocks/Sample/Definitions.juvix
module Sample.Definitions;

axiom A : Type;

type Nat :=
zero : Nat |
suc : Nat -> Nat;

f : A -> Nat;
f a := zero;

end;
